test/vm/fails/invalid_erase.js

var test = [1, 2, 3];
erase(test, 2);
